# autortorrent

./: README.md  pyproject.toml
autortorrent/: cli.py  db.py  scan.py  seed_torrent_file.py
